# rust-sandbox

./: .gitignore  readme.md
actix-gcd/: Cargo.toml
actix-gcd/src/: main.rs
actix/actix-todos/: .env  Cargo.toml  database.sqlite
actix/actix-todos/migration/src/: lib.rs  m20230402_214115_create_users_table.rs  m20230405_131126_create_todos_table.rs
actix/actix-todos/src/: auth.rs  main.rs  todos.rs
actix/actix-todos/src/entity/: mod.rs  todo.rs  user.rs
axum/axum-test/: Cargo.toml
axum/axum-test/src/: error.rs  main.rs
axum/axum-test/tests/: quick_dev.rs
command-line-rust/ch1-hello/: Cargo.toml
command-line-rust/ch1-hello/tests/: cli.rs
command-line-rust/ch10-commr/src/: lib.rs
command-line-rust/ch11-tailr/src/: lib.rs
command-line-rust/ch12-fortune/src/: lib.rs
command-line-rust/ch13-calr/src/: lib.rs
command-line-rust/ch14-lsr/: Cargo.toml
command-line-rust/ch14-lsr/src/: lib.rs  main.rs  owner.rs
command-line-rust/ch2-echor/: mk-outs.sh
command-line-rust/ch2-echor/src/: main.rs
command-line-rust/ch2-echor/tests/: cli.rs
command-line-rust/ch3-catr/src/: lib.rs
command-line-rust/ch4-headr/src/: lib.rs
command-line-rust/ch5-wcr/src/: lib.rs
command-line-rust/ch6-uniqr/src/: lib.rs
fundamental-types/src/: main.rs
gcd/src/: main.rs
mac-test/: Cargo.toml
mac-test/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs  main.rs
mandelbrot/src/: main.rs
proxyserver/: Cargo.toml
proxyserver/src/: main.rs
quickreplace/: Cargo.toml
quickreplace/src/: main.rs
rust-book/ch1/: main.rs
rust-book/ch3/src/: main.rs
(+5 files in other folders)
