[workspace]
members = [".", "migration"]

[package]
name = "actix-todos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sea-orm = { version = "^0.11.2", features = [ "sqlx-sqlite", "runtime-actix-native-tls", "macros" ] }
migration = {path = "migration"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.14.0"
jsonwebtoken = "8.3.0"
futures-util = "0.3.28"
actix-web-httpauth = "0.8.0"